--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.kapt'
+
 }
-apply plugin: 'kotlin-kapt'
+
 android {
-    namespace 'com.bignerdranch.android.criminalintent'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.bignerdranch.android.criminalintent"
+        applicationId "com.shnayder.android.criminalintent"
         minSdk 29
         targetSdk 32
         versionCode 1
@@ -36,14 +36,20 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    implementation'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.room:room-runtime:2.3.0'
-    kapt 'androidx.room:room-compiler:2.3.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+
+    implementation 'androidx.room:room-runtime:2.3.0'
+    kapt 'androidx.room:room-compiler:2.3.0'
+    //implementation 'androidx.room:room-runtime:2.1.0-alpha04'
+    //kapt 'androidx.room:room-compiler:2.1.0-alpha04'
+
 }
